# Interpolator

./: .gitignore  CMakeLists.txt  README.md  settings.cmake
include/Inter/: common.h  exception.h  extra_type.h  memory.h  type.h  wutil.h
include/test/: InterCXX.hpp
source/Inter/: CMakeLists.txt  exception.c  interpol.c  memory.c  wutil.c
source/test/: CMakeLists.txt  InterCXX.cpp  main.cpp
